<resources>
    <string name="app_name">Ansys</string>
    <string name="login_name">"تسجيل الدخول "</string>
    <string name="email">البريد الالكتروني</string>
    <string name="ed_email_text">xxx@gmail.com</string>
    <string name="password">كلمة المرور</string>

    <string name="Password_text">*************</string>
    <string name="forgot_password_text">هل نسيت كلمة المرور؟</string>
    <string name="login_with">"التسجيل بواسطة "</string>
    <string name="Register_name">تسجيل حساب جديد</string>
    <string name="register_visitor">تسجيل كزائر</string>
    <string name="full_name">الاسم الكامل</string>
    <string name="change_password">ارسال</string>
    <string name="main_name">استكشف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions">نقدر مخاوفكم واهتمامكم بشأن خصوصية بياناتكم على شبكة الإنترنت.


لقد تم إعداد هذه السياسة لمساعدتكم في تفهم طبيعة البيانات التي نقوم بتجميعها منكم عند زيارتكم ل (موقع / تطبيق) أخضر على شبكة الانترنت وكيفية تعاملنا مع هذه البيانات الشخصية.

التصفح
لم نقم بتصميم أخضر من أجل تجميع بياناتك الشخصية أثناء التصفح، وإنما سيتم فقط استخدام البيانات المقدمة من قبلك بمعرفتك ومحض إرادتك.

عنوان بروتوكول شبكة الإنترنت (IP)
في أي وقت تزور فيه اي موقع انترنت بما فيها أخضر، سيقوم السيرفر المضيف بتسجيل عنوان بروتوكول شبكة الإنترنت (IP) الخاص بك، تاريخ ووقت الزيارة ونوع متصفح الإنترنت الذي تستخدمه والعنوان URL الخاص بأي موقع من مواقع الإنترنت التي تقوم بإحالتك إلى أخضر على الشبكة.

عمليات المسح على الشبكة
إن عمليات المسح التي نقوم بها مباشرة على الشبكة تمكننا من تجميع بيانات محددة مثل البيانات المطلوبة منك بخصوص نظرتك وشعورك تجاه موقعنا/ تطبيقنا. تعتبر ردودك ذات أهمية قصوى، ومحل تقديرنا حيث أنها تمكننا من تحسين المستوى، ولك كامل الحرية والإختيار في تقديم البيانات المتعلقة بإسمك والبيانات الأخرى.

إفشاء المعلومات
سنحافظ في كافة الأوقات على خصوصية وسرية كافة البيانات الشخصية التي نتحصل عليها. ولن يتم إفشاء هذه المعلومات إلا إذا كان ذلك مطلوباً بموجب أي قانون أو عندما نعتقد بحسن نية أن مثل هذا الإجراء سيكون مطلوباً أو مرغوباً فيه للتمشي مع القانون، أو للدفاع عن أو حماية حقوق الملكية الخاصة بهذا الموقع أو الجهات المستفيدة منه.

البيانات اللازمة لتنفيذ المعاملات المطلوبة من قبلك
عندما نحتاج إلى أية بيانات خاصة بك , فإننا سنطلب منك تقديمها بمحض إرادتك. حيث ستساعدنا هذه المعلومات في الاتصال بك وتنفيذ طلباتك حيثما كان ذلك ممكنناً. لن يتم اطلاقاً بيع البيانات المقدمة من قبلك إلى أي طرف ثالث بغرض تسويقها لمصلحته الخاصة دون الحصول على موافقتك المسبقة والمكتوبة ما لم يتم ذلك على أساس أنها ضمن بيانات جماعية تستخدم للأغراض الإحصائية والأبحاث دون اشتمالها على أية بيانات من الممكن استخدامها للتعريف بك.

عند الاتصال بنا
سيتم التعامل مع كافة البيانات المقدمة من قبلك على أساس أنها سرية. تتطلب النماذج التي يتم تقديمها مباشرة على الشبكة تقديم البيانات التي ستساعدنا في تحسين موقعنا. سيتم استخدام البيانات التي يتم تقديمها من قبلك في الرد على كافة استفساراتك، ملاحظاتك، أو طلباتك من قبل هذا التطبيق أو أيا من المواقع التابعة له.

إفشاء المعلومات لأي طرف ثالث
لن نقوم ببيع، المتاجرة، تأجير، أو إفشاء أية معلومات لمصلحة أي طرف ثالث خارج أخضر. وسيتم الكشف عن المعلومات فقط في حالة صدور أمر بذلك من قبل أي سلطة قضائية أو تنظيمية.

التعديلات على سياسة سرية وخصوصية المعلومات
نحتفظ بالحق في تعديل بنود وشروط سياسة سرية وخصوصية المعلومات إن لزم الأمر ومتى كان ذلك ملائماً. سيتم تنفيذ التعديلات هنا او على صفحة سياسة الخصوصية الرئيسية بالموقع وسيتم بصفة مستمرة إخطارك بالبيانات التي حصلنا عليها , وكيف سنستخدمها والجهة التي سنقوم بتزويدها بهذه البيانات.

الاتصال بنا
يمكنكم الاتصال بنا عند الحاجة من خلال الضغط على رابط اتصل بنا المتوفر في روابط موقعنا.

اخيرا
إن مخاوفك واهتمامك بشأن سرية وخصوصية البيانات تعتبر مسألة في غاية الأهمية بالنسبة لنا. نحن نأمل أن يتم تحقيق ذلك من خلال هذه السياسة.</string>
    <string name="channel_name">100000</string>
</resources>