<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    tools:context=".activites.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />


        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="48dp"
            android:text="إنشاء حساب جديد "
            android:textColor="@color/primary_text"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/full_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_tv"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:text="@string/full_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/margin_top_14"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/full_name_tv"
            android:layout_marginTop="@dimen/margin_top_14"
            android:background="@color/white"
            android:textColorHint="@color/divider"
            app:errorEnabled="true"
            app:shapeAppearance="@dimen/margin_top_14">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ed_full_name"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/margin_top_14"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email_tv"
            android:layout_marginTop="@dimen/margin_top_14"
            android:background="@color/white"

            android:textColorHint="@color/divider"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ed_email"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/margin_top_14"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/password_tv"

            android:layout_marginTop="@dimen/margin_top_14"
            android:background="@color/white"
            android:textColorHint="@color/primary_light"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ed_password"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded"
            android:text="@string/login_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/btn_register"
            android:layout_alignEnd="@+id/btn_register"
            android:layout_marginTop="@dimen/margin_top_14"
            android:layout_marginEnd="7dp"
            android:text="@string/login_with"
            android:textColor="@color/primary_text" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btn_register"
            android:layout_alignParentRight="false"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="1dp"
            android:layout_toStartOf="@id/tv_login_with"
            android:background="@color/divider" />


        <LinearLayout
            android:id="@+id/li_login_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_with"
            android:layout_marginTop="14dp"
            android:background="@color/primary_light">

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="80dp"
                android:layout_below="@id/tv_login_with"
                android:layout_margin="8dp"

                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="24dp">

                <TextView
                    android:id="@+id/btn_google"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/tv_login_with"
                    android:background="@drawable/search" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="80dp"
                android:layout_below="@id/tv_login_with"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="24dp">

                <TextView
                    android:id="@+id/btn_ios"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/tv_login_with"
                    android:background="@drawable/apple" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="80dp"
                android:layout_below="@id/tv_login_with"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:padding="24dp">

                <TextView
                    android:id="@+id/btn_twitter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/tv_login_with"
                    android:background="@drawable/twitter" />
            </LinearLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/li_login_with"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="التسجيل في تطبيقنا يعني أنك موافق على "
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_Terms_Conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="الشروط و الأحكام "
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintRight_toLeftOf="@id/tv" />

            <View
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/tv_Terms_Conditions"
                app:layout_constraintRight_toRightOf="@id/tv_Terms_Conditions"
                app:layout_constraintTop_toBottomOf="@id/tv_Terms_Conditions" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>